Fix minor styling issue with overflowing content in handlebars, legacy and reddit plugin

--- a/app/components/formatters/handlebars/PkmListHandlebars.module.scss
+++ b/app/components/formatters/handlebars/PkmListHandlebars.module.scss
@@ -1,7 +1,12 @@
 .paper {
-  padding: 10px;
   font-size: 0.8em;
   font-family: "Fira Mono", monospace !important;
   white-space: nowrap;
   overflow-x: auto;
+  padding: 10px 0 10px 10px;
+}
+
+.box {
+  display: inline-block;
+  padding-right: 10px;
 }
