--- a/app/components/formatters/reddit/PkmListReddit.module.scss
+++ b/app/components/formatters/reddit/PkmListReddit.module.scss
@@ -1,5 +1,5 @@
 .paper {
-  padding: 10px;
+  padding: 10px 0 10px 10px;
   font-size: 0.8em;
   font-family: "Fira Mono", monospace !important;
   white-space: nowrap;
@@ -11,6 +11,8 @@
 }
 
 .table {
+  display: inline-table;
+  margin-right: 10px;
   border-collapse: collapse;
   th {
     text-align: left;
